# python-split-balancer

./: .gitignore  README.md  app.base.dockerfile  package.base.dockerfile  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: release.yml  test.yml
app/: main.py  requirements.txt  schemas.py
src/surquest/utils/split_balancer/: __init__.py  errors.py  split_balancer.py
test/: pytest.ini
test/surquest/utils/split_balancer/: test_split_balancer.py
