[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surquest-split-balancer"
version = "0.0.5"
description = "A Python package for dividing a set of units into two most comparable groups based on their characteristics."
authors = [
    {name= "Michal Švarc", email= "michal.svarc@surquest.com"}
]
readme = "README.md"
dependencies = [
    "ortools >= 9.9.3963",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0"
]


[project.urls]
"Homepage" = "https://github.com/surquest/python-split-balancer"
"Bug Tracker" = "https://github.com/surquest/python-split-balancer/issues"


[tool.hatch.build.targets.wheel]
packages = ["surquest"]

[tool.hatch.build.targets.sdist.sources]
"src" = ""
